// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render if country without states 1`] = `null`;

exports[`renders if country is \`CA\` 1`] = `
<div
  className="grid__item one-half"
>
  <div
    className="input input--active select_15p0e27"
  >
    <label
      htmlFor="State/Territory"
      style={Object {}}
    >
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="SC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory"
    >
      <option
        style={
          Object {
            "display": "none",
          }
        }
      >
        
      </option>
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
    </select>
  </div>
</div>
`;

exports[`renders if no country 1`] = `
<div
  className="grid__item one-half"
>
  <div
    className="input input--active select_15p0e27"
  >
    <label
      htmlFor="State/Territory"
      style={Object {}}
    >
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="SC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory"
    >
      <option
        style={
          Object {
            "display": "none",
          }
        }
      >
        
      </option>
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
    </select>
  </div>
</div>
`;

exports[`renders with default state as SC 1`] = `
<div
  className="grid__item one-half"
>
  <div
    className="input input--active select_15p0e27"
  >
    <label
      htmlFor="State/Territory"
      style={Object {}}
    >
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="SC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory"
    >
      <option
        style={
          Object {
            "display": "none",
          }
        }
      >
        
      </option>
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
    </select>
  </div>
</div>
`;

exports[`renders with predefined state 1`] = `
<div
  className="grid__item one-half"
>
  <div
    className="input input--active select_15p0e27"
  >
    <label
      htmlFor="State/Territory"
      style={Object {}}
    >
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="NC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory"
    >
      <option
        style={
          Object {
            "display": "none",
          }
        }
      >
        
      </option>
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
      <option
        className={undefined}
        value={undefined}
      />
    </select>
  </div>
</div>
`;

exports[`test does not render if country without states 1`] = `null`;

exports[`test renders if country is \`CA\` 1`] = `
<div
  className="grid__item one-half">
  <div
    className="input input--active select_15p0e27">
    <label
      htmlFor="State/Territory"
      style={Object {}}>
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="SC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory">
      <option
        style={
          Object {
            "display": "none",
          }
        }>
        
      </option>
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
    </select>
  </div>
</div>
`;

exports[`test renders if no country 1`] = `
<div
  className="grid__item one-half">
  <div
    className="input input--active select_15p0e27">
    <label
      htmlFor="State/Territory"
      style={Object {}}>
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="SC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory">
      <option
        style={
          Object {
            "display": "none",
          }
        }>
        
      </option>
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
    </select>
  </div>
</div>
`;

exports[`test renders with default state as SC 1`] = `
<div
  className="grid__item one-half">
  <div
    className="input input--active select_15p0e27">
    <label
      htmlFor="State/Territory"
      style={Object {}}>
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="SC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory">
      <option
        style={
          Object {
            "display": "none",
          }
        }>
        
      </option>
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
    </select>
  </div>
</div>
`;

exports[`test renders with predefined state 1`] = `
<div
  className="grid__item one-half">
  <div
    className="input input--active select_15p0e27">
    <label
      htmlFor="State/Territory"
      style={Object {}}>
      State/Territory
    </label>
    <select
      className={undefined}
      defaultValue="NC"
      disabled={undefined}
      id="State/Territory"
      name="state"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="State/Territory">
      <option
        style={
          Object {
            "display": "none",
          }
        }>
        
      </option>
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
      <option
        className={undefined}
        value={undefined} />
    </select>
  </div>
</div>
`;
